--- a/src/components/Catalog/CatalogEdit/CatalogMain/catalogMain.scss
+++ b/src/components/Catalog/CatalogEdit/CatalogMain/catalogMain.scss
@@ -60,6 +60,8 @@
         width: 100%;
         background-color: $primary-table-body-hover;
         color: $primary-text-color3;
+        border: 0.5px solid $primary-color-input-border;
+        border-radius: 3px;
         font-family: Lato;
         font-style: normal;
         font-weight: 500;
@@ -92,6 +94,8 @@
         width: 100%;
         background-color: $primary-color-input;
         color: $primary-text-color3;
+        border: 0.5px solid $primary-color-input-border!important;
+        border-radius: 3px;
         font-family: Lato;
         font-style: normal;
         font-weight: 500;
@@ -100,6 +104,7 @@
         border: none;
         .p-inputtext.p-component {
           width: calc(100% - 20px);
+          border: none!important;
         }
         .p-button.p-component {
           background-color: $primary-button-color;
