--- a/src/components/Categories/categories.scss
+++ b/src/components/Categories/categories.scss
@@ -248,10 +248,18 @@
               padding: 2px;
               border-radius: 3px;
               background-color: $primary-button-color-add;
+              color: $primary-text-color4;
+              font-weight: 900;
+              font-size: 11px;
+              line-height: 13px;
             }
             .attr {
               padding: 2px;
               background-color: $primary-color-input-border;
+              color: $primary-text-color4;
+              font-weight: 900;
+              font-size: 11px;
+              line-height: 13px;
             }
             table {
               //width: 100%;
@@ -308,22 +316,23 @@
                       &:hover {
                         .plus-ico {
                           &:before {
-                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 8H8V14H6V8H0V6H6V0H8V6H14V8Z' fill='green'/%3E%3C/svg%3E%0A");;
+                            content: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 8H8V14H6V8H0V6H6V0H8V6H14V8Z' fill='%2344CC44'/%3E%3C/svg%3E ");;
+                            content: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 8H8V14H6V8H0V6H6V0H8V6H14V8Z' fill='%2344CC44'/%3E%3C/svg%3E ");;
                           }
                         }
                         .times-ico {
                           &:before {
-                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z' fill='red'/%3E%3C/svg%3E%0A");;
+                            content: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z' fill='%23FF5556'/%3E%3C/svg%3E ");;
                           }
                         }
                         .chain-ico {
                           &:before {
-                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.59002 11.4095C9.00002 11.7995 9.00002 12.4395 8.59002 12.8295C8.20002 13.2195 7.56002 13.2195 7.17002 12.8295C6.23339 11.8915 5.70732 10.6201 5.70732 9.29453C5.70732 7.96895 6.23339 6.69756 7.17002 5.75953L10.71 2.21953C11.648 1.28291 12.9194 0.756836 14.245 0.756836C15.5706 0.756836 16.842 1.28291 17.78 2.21953C18.7166 3.15756 19.2427 4.42895 19.2427 5.75453C19.2427 7.0801 18.7166 8.3515 17.78 9.28953L16.29 10.7795C16.3 9.95953 16.17 9.13953 15.89 8.35953L16.36 7.87953C16.6404 7.60221 16.8629 7.27206 17.0148 6.90816C17.1667 6.54426 17.2449 6.15385 17.2449 5.75953C17.2449 5.3652 17.1667 4.97479 17.0148 4.6109C16.8629 4.247 16.6404 3.91684 16.36 3.63953C16.0827 3.35919 15.7525 3.13664 15.3886 2.98475C15.0247 2.83286 14.6343 2.75465 14.24 2.75465C13.8457 2.75465 13.4553 2.83286 13.0914 2.98475C12.7275 3.13664 12.3973 3.35919 12.12 3.63953L8.59002 7.16953C8.30968 7.44684 8.08712 7.777 7.93524 8.1409C7.78335 8.50479 7.70514 8.8952 7.70514 9.28953C7.70514 9.68385 7.78335 10.0743 7.93524 10.4382C8.08712 10.8021 8.30968 11.1322 8.59002 11.4095ZM11.41 7.16953C11.8 6.77953 12.44 6.77953 12.83 7.16953C13.7666 8.10756 14.2927 9.37895 14.2927 10.7045C14.2927 12.0301 13.7666 13.3015 12.83 14.2395L9.29002 17.7795C8.35199 18.7161 7.08059 19.2422 5.75502 19.2422C4.42944 19.2422 3.15804 18.7161 2.22002 17.7795C1.28339 16.8415 0.757324 15.5701 0.757324 14.2445C0.757324 12.919 1.28339 11.6476 2.22002 10.7095L3.71002 9.21953C3.70002 10.0395 3.83002 10.8595 4.11002 11.6495L3.64002 12.1195C3.35968 12.3968 3.13712 12.727 2.98524 13.0909C2.83335 13.4548 2.75514 13.8452 2.75514 14.2395C2.75514 14.6339 2.83335 15.0243 2.98524 15.3882C3.13712 15.7521 3.35968 16.0822 3.64002 16.3595C3.91733 16.6399 4.24749 16.8624 4.61139 17.0143C4.97528 17.1662 5.36569 17.2444 5.76002 17.2444C6.15434 17.2444 6.54475 17.1662 6.90865 17.0143C7.27254 16.8624 7.6027 16.6399 7.88002 16.3595L11.41 12.8295C11.6904 12.5522 11.9129 12.2221 12.0648 11.8582C12.2167 11.4943 12.2949 11.1039 12.2949 10.7095C12.2949 10.3152 12.2167 9.9248 12.0648 9.5609C11.9129 9.197 11.6904 8.86684 11.41 8.58953C11.3129 8.49852 11.2355 8.38855 11.1826 8.26643C11.1296 8.14431 11.1023 8.01263 11.1023 7.87953C11.1023 7.74643 11.1296 7.61475 11.1826 7.49262C11.2355 7.3705 11.3129 7.26054 11.41 7.16953Z' fill='violet'/%3E%3C/svg%3E%0A");;
+                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.59002 11.4095C9.00002 11.7995 9.00002 12.4395 8.59002 12.8295C8.20002 13.2195 7.56002 13.2195 7.17002 12.8295C6.23339 11.8915 5.70732 10.6201 5.70732 9.29453C5.70732 7.96895 6.23339 6.69756 7.17002 5.75953L10.71 2.21953C11.648 1.28291 12.9194 0.756836 14.245 0.756836C15.5706 0.756836 16.842 1.28291 17.78 2.21953C18.7166 3.15756 19.2427 4.42895 19.2427 5.75453C19.2427 7.0801 18.7166 8.3515 17.78 9.28953L16.29 10.7795C16.3 9.95953 16.17 9.13953 15.89 8.35953L16.36 7.87953C16.6404 7.60221 16.8629 7.27206 17.0148 6.90816C17.1667 6.54426 17.2449 6.15385 17.2449 5.75953C17.2449 5.3652 17.1667 4.97479 17.0148 4.6109C16.8629 4.247 16.6404 3.91684 16.36 3.63953C16.0827 3.35919 15.7525 3.13664 15.3886 2.98475C15.0247 2.83286 14.6343 2.75465 14.24 2.75465C13.8457 2.75465 13.4553 2.83286 13.0914 2.98475C12.7275 3.13664 12.3973 3.35919 12.12 3.63953L8.59002 7.16953C8.30968 7.44684 8.08712 7.777 7.93524 8.1409C7.78335 8.50479 7.70514 8.8952 7.70514 9.28953C7.70514 9.68385 7.78335 10.0743 7.93524 10.4382C8.08712 10.8021 8.30968 11.1322 8.59002 11.4095ZM11.41 7.16953C11.8 6.77953 12.44 6.77953 12.83 7.16953C13.7666 8.10756 14.2927 9.37895 14.2927 10.7045C14.2927 12.0301 13.7666 13.3015 12.83 14.2395L9.29002 17.7795C8.35199 18.7161 7.08059 19.2422 5.75502 19.2422C4.42944 19.2422 3.15804 18.7161 2.22002 17.7795C1.28339 16.8415 0.757324 15.5701 0.757324 14.2445C0.757324 12.919 1.28339 11.6476 2.22002 10.7095L3.71002 9.21953C3.70002 10.0395 3.83002 10.8595 4.11002 11.6495L3.64002 12.1195C3.35968 12.3968 3.13712 12.727 2.98524 13.0909C2.83335 13.4548 2.75514 13.8452 2.75514 14.2395C2.75514 14.6339 2.83335 15.0243 2.98524 15.3882C3.13712 15.7521 3.35968 16.0822 3.64002 16.3595C3.91733 16.6399 4.24749 16.8624 4.61139 17.0143C4.97528 17.1662 5.36569 17.2444 5.76002 17.2444C6.15434 17.2444 6.54475 17.1662 6.90865 17.0143C7.27254 16.8624 7.6027 16.6399 7.88002 16.3595L11.41 12.8295C11.6904 12.5522 11.9129 12.2221 12.0648 11.8582C12.2167 11.4943 12.2949 11.1039 12.2949 10.7095C12.2949 10.3152 12.2167 9.9248 12.0648 9.5609C11.9129 9.197 11.6904 8.86684 11.41 8.58953C11.3129 8.49852 11.2355 8.38855 11.1826 8.26643C11.1296 8.14431 11.1023 8.01263 11.1023 7.87953C11.1023 7.74643 11.1296 7.61475 11.1826 7.49262C11.2355 7.3705 11.3129 7.26054 11.41 7.16953Z' fill='%23806CE9'/%3E%3C/svg%3E ");;
                           }
                         }
                         .case-ico {
                           &:before {
-                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 4H15V2C15 0.89 14.11 0 13 0H7C5.89 0 5 0.89 5 2V4H2C0.89 4 0 4.89 0 6V17C0 18.11 0.89 19 2 19H18C19.11 19 20 18.11 20 17V6C20 4.89 19.11 4 18 4ZM7 2H13V4H7V2ZM18 17H2V15H18V17ZM18 12H2V6H5V8H7V6H13V8H15V6H18V12Z' fill='blue'/%3E%3C/svg%3E%0A");;
+                            content: url("data:image/svg+xml,%3Csvg width='20' height='19' viewBox='0 0 20 19' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 4H15V2C15 0.89 14.11 0 13 0H7C5.89 0 5 0.89 5 2V4H2C0.89 4 0 4.89 0 6V17C0 18.11 0.89 19 2 19H18C19.11 19 20 18.11 20 17V6C20 4.89 19.11 4 18 4ZM7 2H13V4H7V2ZM18 17H2V15H18V17ZM18 12H2V6H5V8H7V6H13V8H15V6H18V12Z' fill='%235AC4FF'/%3E%3C/svg%3E%0A");
                           }
                         }
                       }
@@ -332,7 +341,7 @@
                         left: 44%;
 
                         &:before {
-                          content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z' fill='white'/%3E%3C/svg%3E%0A");;
+                          content: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14 1.41L12.59 0L7 5.59L1.41 0L0 1.41L5.59 7L0 12.59L1.41 14L7 8.41L12.59 14L14 12.59L8.41 7L14 1.41Z' fill='white'/%3E%3C/svg%3E%0A");
                         }
                       }
                     }
@@ -342,6 +351,12 @@
                     background-color: $primary-table-body-hover;
                     .p-button {
                       background-color: $primary-table-body-hover;
+                    }
+                    .attr {
+                      color: $primary-text-color1;
+                    }
+                    .count {
+                      color: $primary-text-color1;
                     }
                   }
 
