--- a/src/components/Menus/NavigationBaseMenu/navigationBaseMenu.scss
+++ b/src/components/Menus/NavigationBaseMenu/navigationBaseMenu.scss
@@ -24,6 +24,28 @@
     width: 48px;
     height: 48px;
   }
+  .menu-item {
+    height: 64px;
+    width: calc(100% - 4px);
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: $primary-text-color1;
+    justify-content: center;
+    float: right;
+    &:hover, &.active-item {
+      background-color: $primary-menu-hover;
+      color: $primary-text-color2;
+      border-left: $primary-color-active 4px solid;
+    }
+  }
 
   .menu-items-block {
     margin-top: 16px;
