--- a/src/components/Catalog/CatalogEdit/CatalogCard/catalogCard.scss
+++ b/src/components/Catalog/CatalogEdit/CatalogCard/catalogCard.scss
@@ -11,7 +11,7 @@
     border-color: $primary-color-border;
     //left: 600px!important;
     .p-menuitem {
-      background-color: $primary-menuitem-link;
+      background-color: $primary-color-border-active;
       .p-menuitem-link {
         font-family: Lato;
         font-style: normal;
@@ -21,12 +21,36 @@
         text-decoration: none;
         .p-menuitem-text {
           color: $primary-text-color3;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          cursor: default;
+          .p-button {
+            min-width: 36px;
+            min-height: 10px;
+            background-color: $primary-color-input-border;
+            color: $primary-text-color3;
+          }
+          .p-inputswitch {
+            .p-inputswitch-slider {
+              background-color: $primary-color-input-border;
+              &:before {
+                background-color: $primary-color-tabview-border;
+              }
+            }
+
+            &.p-inputswitch-checked {
+              .p-inputswitch-slider {
+                background-color: $primary-color-active;
+              }
+            }
+          }
         }
       }
     }
     .p-menuitem-active {
       .p-menuitem-link {
-        background-color: $primary-button-color-h!important;
+        background-color: $primary-menuitem-link!important;
       }
     }
   }
@@ -42,189 +66,200 @@
     line-height: 19px;
     color: $primary-text-color3;
   }
-  .p-datatable-scrollable-wrapper {
-    margin: 0 auto;
-    height: calc(100vh - 210px);
-    //overflow-y: auto;
-    //scrollbar-width: thin;
-    width: 96%;
+  .body-for-main-item {
+    position: relative;
+    .p-datatable-scrollable-wrapper {
+      margin: 10px auto;
+      height: calc(100vh - 120px);
+      //overflow-y: auto;
+      //scrollbar-width: thin;
+      width: 96%;
 
-    background-color: $primary-block-back-color;
-    padding: 12px 12px 12px 12px;
-    border-radius: 10px;
-    table {
-      width: 98%;
-      margin: 0 auto;
-      table-layout: auto;
-      .p-datatable-thead {
-        tr {
-          height: 70px;
-        }
-        th {
-          background-color: $primary-table-header!important;
-          border: none!important;
-          border-radius: 5px!important;
-          color: $primary-text-color2!important;
-          font-family: Lato;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 14px;
-          line-height: 17px;
-        }
-      }
-      .p-datatable-row {
-        height: 62px;
-        background-color: $primary-block-back-color!important;
-        color: $primary-text-color3!important;
-        font-family: Lato;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 17px;
-
-        td {
-          border: none!important;
-          padding-left: 50px;
-        }
-      }
-      .p-datatable-row:hover {
-        background-color: $primary-table-body-hover!important;
-      }
-      .p-rowgroup-header {
-        background-color: $primary-block-back-color;
-        color: $primary-text-color5;
-        height: 62px;
-        font-family: Lato;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 19px;
-        td {
-          border: none!important;
-        }
-        .p-row-toggler-icon.pi.pi-fw.p-clickable.pi-chevron-down:before {
-          content: '\e90f';
-          color: $primary-text-color5;
-        }
-        .p-row-toggler-icon.pi.pi-fw.p-clickable.pi-chevron-right:before {
-          content: '\e90d';
-          color: $primary-text-color5;
-        }
-      }
-      .p-rowgroup-header:hover {
-        background-color: $primary-table-body-hover!important;
-      }
-    }
-
-    .p-datatable-scrollable-view {
-      height: 100%;
-      width: 100%;
-
-      .p-datatable-scrollable-header {
-        margin-bottom: 10px;
-        width: 100%;
-        /*width: calc(100% + 24px);
-        margin-left: -12px;
-        padding: 0px 12px;
-        background-color: #393A40 !important;*/
-
-        .p-datatable-scrollable-header-box {
-          margin-right: 0px !important;
-
-          table {
-            .p-sortable-column-icon {
-              margin-left: 5px;
-
-              &.pi-sort-amount-down {
-                color: $primary-button-color;
-              }
-
-              &.pi-sort-amount-up-alt {
-                color: $primary-button-color;
-              }
-            }
-
-            tr {
-              height: 40px;
-              //width: 100%;
-            }
-
-            th {
-              background-color: $primary-table-header !important;
-              border-right: 0.5px solid $primary-text-color1 !important;
-              border-radius: 0px !important;
-              color: $primary-text-color2 !important;
-              font-style: normal;
-              font-weight: 600;
-              font-size: 14px;
-              line-height: 17px;
-
-              &:first-child {
-                border-top-left-radius: 5px !important;
-                border-bottom-left-radius: 5px !important;
-              }
-
-              &:last-child {
-                border-top-right-radius: 5px !important;
-                border-bottom-right-radius: 5px !important;
-                border-right: none !important;
-              }
-            }
-
+      background-color: $primary-block-back-color;
+      padding: 12px 12px 12px 12px;
+      border-radius: 10px;
+      table {
+        width: 98%;
+        margin: 0 auto;
+        table-layout: auto;
+        .p-datatable-thead {
+          tr {
+            height: 70px;
+          }
+          th {
+            background-color: $primary-table-header!important;
+            border: none!important;
+            border-radius: 5px!important;
+            color: $primary-text-color2!important;
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
           }
         }
+        .p-datatable-row {
+          height: 62px;
+          background-color: $primary-block-back-color!important;
+          color: $primary-text-color3!important;
+          font-family: Lato;
+          font-style: normal;
+          font-weight: 500;
+          font-size: 14px;
+          line-height: 17px;
+
+          td {
+            border: none!important;
+            padding-left: 50px;
+          }
+        }
+        .p-datatable-row:hover {
+          background-color: $primary-table-body-hover!important;
+        }
+        .p-rowgroup-header {
+          background-color: $primary-block-back-color;
+          color: $primary-text-color5;
+          height: 62px;
+          font-family: Lato;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 19px;
+          td {
+            border: none!important;
+          }
+          .p-row-toggler-icon.pi.pi-fw.p-clickable.pi-chevron-down:before {
+            content: '\e90f';
+            color: $primary-text-color5;
+          }
+          .p-row-toggler-icon.pi.pi-fw.p-clickable.pi-chevron-right:before {
+            content: '\e90d';
+            color: $primary-text-color5;
+          }
+        }
+        .p-rowgroup-header:hover {
+          background-color: $primary-table-body-hover!important;
+        }
       }
 
-      .p-datatable-scrollable-body {
-        height: auto;
-        max-height: calc(100vh - 275px)!important;
-        overflow-y: auto;
-        display: block;
-        position: relative;
+      .p-datatable-scrollable-view {
+        height: 100%;
         width: 100%;
-        scrollbar-color: $primary-color-scroll $primary-block-back-color;
-        scrollbar-width: thin;
-        table {
-          //width: 100%;
-          table-layout: auto !important;
-          height: 100%;
-          border-collapse: separate;
-          border-spacing: 0px 5px;
 
-          tbody {
-            //width: 100%;
+        .p-datatable-scrollable-header {
+          margin-bottom: 10px;
+          width: 100%;
+          /*width: calc(100% + 24px);
+          margin-left: -12px;
+          padding: 0px 12px;
+          background-color: #393A40 !important;*/
 
-            .p-datatable-row {
-              width: 100%;
-              height: 40px;
-              margin: 5px 0px;
-              font-style: normal;
-              font-weight: 500;
-              font-size: 14px;
-              line-height: 17px;
-              color: $primary-text-color3;
+          .p-datatable-scrollable-header-box {
+            margin-right: 0px !important;
 
-              &:hover {
-                background-color: $primary-table-body-hover;
+            table {
+              .p-sortable-column-icon {
+                margin-left: 5px;
 
+                &.pi-sort-amount-down {
+                  color: $primary-button-color;
+                }
+
+                &.pi-sort-amount-up-alt {
+                  color: $primary-button-color;
+                }
               }
 
-              &.p-highlight {
-                border: 0.5px solid $primary-table-body-active;
-                outline: 0.5px solid $primary-table-body-active !important;
+              tr {
+                height: 40px;
+                //width: 100%;
+              }
+
+              th {
+                background-color: $primary-table-header !important;
+                border-right: 0.5px solid $primary-text-color1 !important;
+                border-radius: 0px !important;
+                color: $primary-text-color2 !important;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 17px;
+
+                &:first-child {
+                  border-top-left-radius: 5px !important;
+                  border-bottom-left-radius: 5px !important;
+                }
+
+                &:last-child {
+                  border-top-right-radius: 5px !important;
+                  border-bottom-right-radius: 5px !important;
+                  border-right: none !important;
+                }
+              }
+
+            }
+          }
+        }
+
+        .p-datatable-scrollable-body {
+          height: auto;
+          max-height: calc(100vh - 275px)!important;
+          overflow-y: auto;
+          display: block;
+          position: relative;
+          width: 100%;
+          scrollbar-color: $primary-color-scroll $primary-block-back-color;
+          scrollbar-width: thin;
+          table {
+            //width: 100%;
+            table-layout: auto !important;
+            height: 100%;
+            border-collapse: separate;
+            border-spacing: 0px 5px;
+
+            tbody {
+              //width: 100%;
+
+              .p-datatable-row {
+                width: 100%;
+                height: 40px;
+                margin: 5px 0px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 17px;
+                color: $primary-text-color3;
 
                 &:hover {
-                  background-color: $primary-table-body-active-h;
+                  background-color: $primary-table-body-hover;
+
+                }
+
+                &.p-highlight {
+                  border: 0.5px solid $primary-table-body-active;
+                  outline: 0.5px solid $primary-table-body-active !important;
+
+                  &:hover {
+                    background-color: $primary-table-body-active-h;
+                  }
+                }
+                &.p-highlight-contextmenu {
+                  border: 0.5px solid $primary-table-body-active;
+                  outline: 0.5px solid $primary-table-body-active !important;
+
+                  &:hover {
+                    background-color: $primary-table-body-active-h;
+                  }
                 }
               }
             }
           }
         }
-      }
 
-      .p-datatable-scrollable-footer {
-      }
+        .p-datatable-scrollable-footer {
+        }
 
+      }
     }
   }
 }
