--- a/src/components/Catalog/CatalogEdit/catalogEdit.scss
+++ b/src/components/Catalog/CatalogEdit/catalogEdit.scss
@@ -6,7 +6,7 @@
   display: flex;
   //flex-direction: column;
   align-items: stretch;
-  position: relative;
+  //position: relative;
 
   .navigation-add-menu {
     height: 100%;
